; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/massdrop/alt/keymaps/reywood/extr_rgb_matrix_user.c_update_led_boosts.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/massdrop/alt/keymaps/reywood/extr_rgb_matrix_user.c_update_led_boosts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@last_boost_update = common dso_local global i32 0, align 4
@LED_BOOST_REFRESH_INTERVAL_IN_MS = common dso_local global i64 0, align 8
@ISSI3733_LED_COUNT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @update_led_boosts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @update_led_boosts() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i64, align 8
  %3 = load i32, i32* @last_boost_update, align 4
  %4 = call i64 @timer_elapsed(i32 %3)
  %5 = load i64, i64* @LED_BOOST_REFRESH_INTERVAL_IN_MS, align 8
  %6 = icmp sgt i64 %4, %5
  br i1 %6, label %7, label %16

7:                                                ; preds = %0
  %8 = call i32 (...) @timer_read()
  store i32 %8, i32* @last_boost_update, align 4
  %9 = load i32, i32* @ISSI3733_LED_COUNT, align 4
  %10 = zext i32 %9 to i64
  %11 = call i8* @llvm.stacksave()
  store i8* %11, i8** %1, align 8
  %12 = alloca i32, i64 %10, align 16
  store i64 %10, i64* %2, align 8
  %13 = call i32 @calculate_new_led_boosts(i32* %12)
  %14 = call i32 @set_new_led_boosts(i32* %12)
  %15 = load i8*, i8** %1, align 8
  call void @llvm.stackrestore(i8* %15)
  br label %16

16:                                               ; preds = %7, %0
  ret void
}

declare dso_local i64 @timer_elapsed(i32) #1

declare dso_local i32 @timer_read(...) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @calculate_new_led_boosts(i32*) #1

declare dso_local i32 @set_new_led_boosts(i32*) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
